API now reads a file and calls a prediction from the model

--- a/Digital_Reader_API.ipynb
+++ b/Digital_Reader_API.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Digital_Reader_API.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwxbbSZuBWDp1VqvFkTXh6",
+      "authorship_tag": "ABX9TyPlaawXbhjbMHYqfo0eidcg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Xg67LZ-jdjg",
-        "outputId": "cdc2c97d-0345-4911-ce80-5bf0e119b048"
+        "outputId": "fa7a56c1-75f2-470a-e9b2-4202e841ce1e"
       },
       "source": [
         "# import Flask and jsonify\n",
@@ -204,9 +204,11 @@
         "# import Resource, Api and reqparser\n",
         "from flask_restful import Resource, Api, reqparse\n",
         "import numpy as np\n",
-        "import lhl_model_utils as lhl\n",
+        "import lhl_model_utils as lhl_model\n",
+        "import lhl_build_dataframe as lhl_df\n",
         "import importlib\n",
-        "importlib.reload(lhl)\n",
+        "importlib.reload(lhl_model)\n",
+        "importlib.reload(lhl_df)\n",
         "import pandas as pd\n",
         "import cv2\n",
         "\n",
@@ -218,7 +220,7 @@
         "app.config['UPLOAD_EXTENSIONS'] = ['.jpg', '.png', '.gif']\n",
         "\n",
         "# Load the classifier model \n",
-        "classifier_model = lhl.load_model('/content/drive/MyDrive/Colab Notebooks/digit_classifier_model1')\n",
+        "classifier_model = lhl_model.load_model('/content/drive/MyDrive/Colab Notebooks/digit_classifier_model1')\n",
         "    \n",
         "# Create a /read_digits resource for the API\n",
         "class ReadDigits(Resource):\n",
@@ -259,8 +261,8 @@
         "        print(img_arr.shape)\n",
         "        \n",
         "        images_list = np.expand_dims(img_arr, axis=0)\n",
-        "        \n",
-        "        res = lhl.predict_digits(images_list, classifier_model)\n",
+        "        images_res_list = lhl_df.process_resize_with_distortion(images_list)\n",
+        "        res = lhl_model.predict_digits(images_res_list, classifier_model)\n",
         "        \n",
         "        print(res)\n",
         "        # we cannot send numpy array as a result\n",
@@ -276,7 +278,7 @@
         "run_with_ngrok(app)\n",
         "app.run()"
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +301,7 @@
         {
           "output_type": "stream",
           "text": [
-            " * Running on http://5cf0451ccfcf.ngrok.io\n",
+            " * Running on http://9ac6cc6b6327.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ],
           "name": "stdout"
@@ -307,9 +309,9 @@
         {
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [20/Mar/2021 21:48:03] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [20/Mar/2021 21:48:04] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [20/Mar/2021 21:48:11] \"\u001b[37mGET /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
+            "127.0.0.1 - - [21/Mar/2021 01:49:41] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
+            "127.0.0.1 - - [21/Mar/2021 01:49:41] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "127.0.0.1 - - [21/Mar/2021 01:49:45] \"\u001b[37mGET /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
           ],
           "name": "stderr"
         },
@@ -324,72 +326,16 @@
         {
           "output_type": "stream",
           "text": [
-            "[2021-03-20 21:48:22,584] ERROR in app: Exception on /read_digits [POST]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/app.py\", line 2447, in wsgi_app\n",
-            "    response = self.full_dispatch_request()\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/app.py\", line 1952, in full_dispatch_request\n",
-            "    rv = self.handle_user_exception(e)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask_restful/__init__.py\", line 272, in error_router\n",
-            "    return original_handler(e)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/app.py\", line 1821, in handle_user_exception\n",
-            "    reraise(exc_type, exc_value, tb)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/_compat.py\", line 39, in reraise\n",
-            "    raise value\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/app.py\", line 1950, in full_dispatch_request\n",
-            "    rv = self.dispatch_request()\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/flask/app.py\", line 1936, in dispatch_request\n",
-            "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-            "  File \"<ipython-input-13-d8c1fb1e6dd5>\", line 63, in read_digits\n",
-            "    res = lhl.predict_digits(images_list, classifier_model)\n",
-            "  File \"/content/drive/MyDrive/Colab Notebooks/lhl_model_utils.py\", line 40, in predict_digits\n",
-            "    prediction = model.predict(batch)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py\", line 1629, in predict\n",
-            "    tmp_batch_outputs = self.predict_function(iterator)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/def_function.py\", line 828, in __call__\n",
-            "    result = self._call(*args, **kwds)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/def_function.py\", line 871, in _call\n",
-            "    self._initialize(args, kwds, add_initializers_to=initializers)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/def_function.py\", line 726, in _initialize\n",
-            "    *args, **kwds))\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/function.py\", line 2969, in _get_concrete_function_internal_garbage_collected\n",
-            "    graph_function, _ = self._maybe_define_function(args, kwargs)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/function.py\", line 3361, in _maybe_define_function\n",
-            "    graph_function = self._create_graph_function(args, kwargs)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/function.py\", line 3206, in _create_graph_function\n",
-            "    capture_by_value=self._capture_by_value),\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\", line 990, in func_graph_from_py_func\n",
-            "    func_outputs = python_func(*func_args, **func_kwargs)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/eager/def_function.py\", line 634, in wrapped_fn\n",
-            "    out = weak_wrapped_fn().__wrapped__(*args, **kwds)\n",
-            "  File \"/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\", line 977, in wrapper\n",
-            "    raise e.ag_error_metadata.to_exception(e)\n",
-            "ValueError: in user code:\n",
-            "\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py:1478 predict_function  *\n",
-            "        return step_function(self, iterator)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py:1468 step_function  **\n",
-            "        outputs = model.distribute_strategy.run(run_step, args=(data,))\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/distribute/distribute_lib.py:1259 run\n",
-            "        return self._extended.call_for_each_replica(fn, args=args, kwargs=kwargs)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/distribute/distribute_lib.py:2730 call_for_each_replica\n",
-            "        return self._call_for_each_replica(fn, args, kwargs)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/distribute/distribute_lib.py:3417 _call_for_each_replica\n",
-            "        return fn(*args, **kwargs)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py:1461 run_step  **\n",
-            "        outputs = model.predict_step(data)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py:1434 predict_step\n",
-            "        return self(x, training=False)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/base_layer.py:998 __call__\n",
-            "        input_spec.assert_input_compatibility(self.input_spec, inputs, self.name)\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/input_spec.py:274 assert_input_compatibility\n",
-            "        ', found shape=' + display_shape(x.shape))\n",
-            "\n",
-            "    ValueError: Input 0 is incompatible with layer resnet50: expected shape=(None, 600, 400, 3), found shape=(None, 148, 341, 3)\n",
-            "\n",
-            "127.0.0.1 - - [20/Mar/2021 21:48:22] \"\u001b[35m\u001b[1mPOST /read_digits HTTP/1.1\u001b[0m\" 500 -\n"
+            "127.0.0.1 - - [21/Mar/2021 01:49:54] \"\u001b[37mPOST /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "[2]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
