Added jinja template variable to show results

--- a/Digital_Reader_API.ipynb
+++ b/Digital_Reader_API.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Digital_Reader_API.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlaawXbhjbMHYqfo0eidcg",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMng1GlzJSjQl1buzT+vzMy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Xg67LZ-jdjg",
-        "outputId": "fa7a56c1-75f2-470a-e9b2-4202e841ce1e"
+        "outputId": "569fe68c-3a8e-445d-edb8-c0fd856da08e"
       },
       "source": [
         "# import Flask and jsonify\n",
@@ -268,7 +269,9 @@
         "        # we cannot send numpy array as a result\n",
         "        #return res.tolist() \n",
         "        \n",
-        "        return render_template('digit_classifier_response.html')\n",
+        "        return render_template('digit_classifier_response.html', \n",
+        "                               result_list=list(res)\n",
+        "                               )\n",
         "        \n",
         "\n",
         "#if __name__ == '__main__':\n",
@@ -278,7 +281,7 @@
         "run_with_ngrok(app)\n",
         "app.run()"
       ],
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +304,7 @@
         {
           "output_type": "stream",
           "text": [
-            " * Running on http://9ac6cc6b6327.ngrok.io\n",
+            " * Running on http://0b9c3c24ada9.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ],
           "name": "stdout"
@@ -309,9 +312,9 @@
         {
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [21/Mar/2021 01:49:41] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [21/Mar/2021 01:49:41] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [21/Mar/2021 01:49:45] \"\u001b[37mGET /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
+            "127.0.0.1 - - [21/Mar/2021 04:09:50] \"\u001b[33mGET / HTTP/1.1\u001b[0m\" 404 -\n",
+            "127.0.0.1 - - [21/Mar/2021 04:09:51] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+            "127.0.0.1 - - [21/Mar/2021 04:09:56] \"\u001b[37mGET /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
           ],
           "name": "stderr"
         },
@@ -319,14 +322,15 @@
           "output_type": "stream",
           "text": [
             "Its a post\n",
-            "(148, 341, 3)\n"
+            "(148, 341, 3)\n",
+            "WARNING:tensorflow:7 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f38e3a76200> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [21/Mar/2021 01:49:54] \"\u001b[37mPOST /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
+            "127.0.0.1 - - [21/Mar/2021 04:10:04] \"\u001b[37mPOST /read_digits HTTP/1.1\u001b[0m\" 200 -\n"
           ],
           "name": "stderr"
         },
